--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Prepare Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: nightly
+          components: rust-src
       - name: Set up dependencies
         run: |
           sudo apt-get update
