add exefs.nsp to build artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,5 @@ jobs:
             build/*.nss
             build/main.npdm
             build/*.nso
+            build/exefs.nsp
+            toolbox.json
